Fix main container layout bug

--- a/docs/main.css
+++ b/docs/main.css
@@ -3,7 +3,7 @@
     --grigioChiaro: #eef0f1;
     --grigioScuro: #383838;
     --rosso: #f6416c;
-    --verde: #00b8a9 
+    --verde: #00b8a9; 
 }
 
 *::selection {
@@ -66,7 +66,7 @@ img.c64 {
 main {
     flex: 1;
     max-width: 700px;
-    padding: 40px 10px;
+    padding: 10px;
 }
 
 h1 {
@@ -175,12 +175,13 @@ footer {
     text-align: center;
 }
 
-@media only screen and (min-width: 616px) {
+@media only screen and (min-width: 720px) {
     body {
         margin: 0 auto;
     }
 
     main {
         margin: 0 auto;
+        padding: 40px 10px;
     }
 }
